# DeepMetria_MFC

./: .gitignore  CLAUDE.md  DeepMetria.sln  DeepMetria.vcxproj  DeepMetria.vcxproj.filters  build.bat  pipeline.py  pipeline_result.json  rebuild.bat  secrets.json.template
.claude/: compact.md  docs-map.md  settings.json  settings.local.json
.claude/temp/: focus_fix.py  sitecustomize.py
.omc/sessions/: 227c4674-0abc-4687-8f63-d613344c7119.json
docs/: DeepMetria_와이어프레임.pptx  presentation-개발자.md  presentation-비개발자.md  presentation-통합본.md  파일구조.md  핵심설계.md
docs/build manual/: README.md  build.bat  pipeline.bat  rebuild.bat  run.bat  setup-secrets.bat
docs/dev/: Architecture.md  DetailedSpec.md  SRS.md  STP.md  api-spec.md  db-schema.md  deploy-guide.md  env-guide.md  handover.md  limitations.md  test-plan.md
docs/dev/performance/: performance-2026-04-21.md
docs/dev/security-checklist/: security-checklist-2026-04-21.md
docs/dev/test-results/: screen-test-plan.md  test-2026-04-21.md
docs/diagrams/: README.md  architecture.mmd  flow-question.mmd
docs/과제/: 상세설계서_part1.md  상세설계서_part2.md
scripts/: list-gemini-models.ps1  setup-secrets.ps1  test-llm.ps1  verify-key.ps1
src/: stdafx.cpp  stdafx.h
src/App/: DeepMetria.cpp  DeepMetria.h  DeepMetriaApp.cpp  DeepMetriaApp.h  DeepMetriaDoc.cpp  DeepMetriaDoc.h  DeepMetriaView.cpp  DeepMetriaView.h  MainFrame.cpp  MainFrame.h  MainFrm.cpp  MainFrm.h
src/Common/: Exceptions.h  Messages.cpp  Messages.h  StringUtils.h  Types.h
src/Dialog/: DownloadDlg.cpp  DownloadDlg.h  ExportDialog.cpp  ExportDialog.h  FileOpenDialog.cpp  FileOpenDialog.h  FormatEditorDlg.cpp  FormatEditorDlg.h  SettingsDialog.cpp  SettingsDialog.h
src/Document/: ColumnTypeInference.h  DeepMetriaDoc.cpp  DeepMetriaDoc.h
src/Domain/: AnalysisFlow.cpp  AnalysisFlow.h  AnalysisTool.cpp  AnalysisTool.h  ChainOfThinking.h  Dashboard.cpp  Dashboard.h  DataSource.cpp  DataSource.h  MemoryCache.h  Visualization.h
src/Domain/Analysis/: AnalysisTools.cpp  AnalysisTools.h  ChartSelector.cpp  ChartSelector.h
src/Domain/Dashboard/: DashboardManager.cpp  DashboardManager.h
src/Domain/DataSource/: DataSourceService.cpp  DataSourceService.h  DataSummarizer.cpp  DataSummarizer.h
src/Domain/Orchestrator/: AnalysisFlow.cpp  AnalysisFlow.h  AnalysisOrchestrator.cpp  AnalysisOrchestrator.h
src/Infra/: ClaudeProvider.cpp  ClaudeProvider.h  GeminiProvider.cpp  GeminiProvider.h  HttpClient.cpp  HttpClient.h  ILLMProvider.h  LLMRouter.cpp  LLMRouter.h  OpenAIProvider.cpp  OpenAIProvider.h  SecretsStore.cpp  SecretsStore.h
src/Infrastructure/Cache/: AnalysisCache.cpp  AnalysisCache.h
src/Infrastructure/CrashRecovery/: CrashRecoveryManager.cpp  CrashRecoveryManager.h
src/Infrastructure/Export/: ExportFormatter.h
src/Infrastructure/LLM/: ClaudeProvider.cpp  ClaudeProvider.h  GeminiProvider.cpp  GeminiProvider.h  HttpClient.cpp  HttpClient.h  LLMProvider.h  LLMRouter.cpp  LLMRouter.h  OpenAIProvider.cpp  OpenAIProvider.h
src/Infrastructure/Parser/: CSVParser.cpp  CSVParser.h  ExcelParser.cpp  ExcelParser.h  JsonParser.cpp  JsonParser.h
src/Infrastructure/Settings/: CSettingsManager.cpp  CSettingsManager.h
src/Infrastructure/Storage/: SQLiteDB.cpp  SQLiteDB.h
src/Parsers/: CsvParser.cpp  CsvParser.h  IDataParser.h  JsonParser.cpp  JsonParser.h  ParserFactory.cpp  ParserFactory.h  XlsxParser.cpp  XlsxParser.h
src/Pch/: stdafx.cpp  stdafx.h  targetver.h
src/Render/: BarChartStrategy.cpp  BarChartStrategy.h  ChartRenderHelpers.h  ChartRenderer.cpp  ChartRenderer.h  IChartStrategy.h  LineChartStrategy.cpp  LineChartStrategy.h  PieChartStrategy.cpp  PieChartStrategy.h  ScatterChartStrategy.cpp  ScatterChartStrategy.h  SummaryChartStrategy.cpp  SummaryChartStrategy.h  TableChartStrategy.cpp  TableChartStrategy.h
src/Renderer/: BarChart.cpp  BarChart.h  ChartRenderer.cpp  ChartRenderer.h  LineChart.cpp  LineChart.h  PieChart.cpp  PieChart.h  ScatterChart.cpp  ScatterChart.h  TableChart.cpp  TableChart.h
src/Resource/: DeepMetria.rc  resource.h
src/Resources/: DeepMetria.rc  resource.h
src/UI/: DataSummaryPane.cpp  DataSummaryPane.h  ExportDialog.cpp  ExportDialog.h  FormatPane.cpp  FormatPane.h  QueryInputDockPane.cpp  QueryInputDockPane.h  RetryDialog.cpp  RetryDialog.h  RibbonBar.cpp  RibbonBar.h  SettingsDialog.cpp  SettingsDialog.h
src/View/: ChartView.cpp  ChartView.h  DashboardView.cpp  DashboardView.h  DataSummaryView.cpp  DataSummaryView.h  QueryInputView.cpp  QueryInputView.h
tests/: CMakeLists.txt  README.md  SelfTest.cpp  SelfTest.h  config.py  helpers.py  integration_results.txt  requirements.txt  startup_diag.txt  test_chart_e2e.py  test_dashboard.py  test_data_summary.py  test_drag_drop.py  test_export.py  test_export_e2e.py  test_file_load.py  test_format_editor.py  test_json_load.py  test_layout.py  test_query_input.py  test_results.txt  test_runner.py
tests/data/: EXPECTED.md  malicious_test.bat  products.json  sample_data.json  sample_data.xls  sample_data.xlsx  sample_header_only.csv  sample_invalid.txt  sample_korean_path_test.csv  sample_malformed.json  sample_missing.csv  sample_narrow.csv  sample_sales.csv  sample_wide.csv  한국재정정보원_주요재정통계_재정지출_국가채무 추이 및 전망_20230816.csv
tests/fixtures/: TestDataFixture.h  TestHelpers.h  stdafx.h
tests/integration/: run_selftest.py  test_analysis_flow.cpp  test_chart_generation.cpp  test_crash_recovery_tdd.cpp  test_dashboard_tdd.cpp  test_export_flow.cpp  test_file_load_flow.cpp
tests/mocks/: MockHttpClient.h  MockLLMProvider.h  MockSQLiteDB.h
tests/unit/: test_analysis_cache.cpp  test_analysis_tools.cpp  test_auth_manager.cpp  test_chart_renderer.cpp  test_chart_selector.cpp  test_dashboard_autoconfig.cpp  test_datasource_schema.cpp  test_datasource_service.cpp  test_exceptions.cpp  test_export_formatter.cpp  test_file_parser.cpp  test_json_parser.cpp  test_llm_providers.cpp  test_llm_retry.cpp  test_llm_router.cpp  test_llm_structure.cpp  test_performance.cpp  test_security.cpp  test_settings_manager.cpp  test_sse_streaming.cpp  test_streaming.cpp
